[package]
name = "arma_mod_packing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version ="4.4.6", features = ["derive"]}
rayon = "1.7.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = { version = "1.0.56", features = [] }
ignore = "0.4.22"
remove_empty_subdirs = "0.1.1"